Bug 72327 - [swrast] piglit glean pointSprite regression
Summary: [swrast] piglit glean pointSprite regression
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-12-04 23:33 UTC by Vinson Lee
Modified: 2014-01-01 02:27 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2013-12-04 23:33:52 UTC
mesa: 314ccf69016d0025ce251155553cc448159a3b10 (master)

$ ./bin/glean -t pointSprite --quick
Could not find any non-black pixels.
	Primitive type: GL_POINTS
	Coord Origin at: GL_UPPER_LEFT
	PointSize: 1.85
Could not find any non-black pixels.
	Primitive type: GL_POINTS
	Coord Origin at: GL_LOWER_LEFT
	PointSize: 1.85
pointSprite:  FAIL rgba8, db, z24, s8, win+pmap, id 33
	5 tests passed, 2 tests failed.

a43b49dfb13dc7e6d2d6d7ceee892077038d7102 is the first bad commit
commit a43b49dfb13dc7e6d2d6d7ceee892077038d7102
Author: Dave Airlie <airlied@redhat.com>
Date:   Wed Nov 13 12:53:52 2013 +1000

    mesa/swrast: fix inverted front buffer rendering with old-school swrast
    
    I've no idea when this broke, but we have some people who wanted it fixed,
    so here's my attempt.
    
    reproducer, run readpix with swrast hit f, or run trival tri -sb things are
    upside down, after this patch they aren't.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=62142
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=66213
    
    Cc: <mesa-stable@lists.freedesktop.org>"
    Signed-off-by: Dave Airlie <airlied@redhat.com>

:040000 040000 70e437e84fa67556a6469a8bf75277a6ec07e8a6 a307a4bc1dcb80aae42897ce27b7771dd8760f4f M	src
bisect run success
Comment 1 Vinson Lee 2014-01-01 02:27:55 UTC
commit 0b16042377a6981ff9bba92387889524a3547b3f
Author: Dave Airlie <airlied@redhat.com>
Date:   Thu Dec 5 13:30:17 2013 +1000

    swrast: fix readback regression since inversion fix
    
    This readback from the frontbuffer with swrast was broken, that bug
    just made it more obviously broken, this fixes it by inverting the
    sub image gets. Also fixes a few other piglits.
    
    Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=72327
    Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=72325
    
    (for 9.2 the patches this depends on were asked to be backported separately
     in an email).
    Cc: "9.2" "10.0" mesa-stable@lists.fedoraproject.org
    Reviewed-by: Brian Paul <brianp@vmware.com>
    Signed-off-by: Dave Airlie <airlied@redhat.com>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.